[gd_scene load_steps=8 format=3 uid="uid://b1cpngw5lupxi"]

[ext_resource type="Script" path="res://Scenes/StageSelect/StageIcon.gd" id="1_g5r4x"]
[ext_resource type="Texture2D" uid="uid://bejgmt5gipy1l" path="res://Assets/sprites/icons.png" id="3_acuxk"]
[ext_resource type="Script" path="res://Resources/Icon.gd" id="4_7x0h2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_udqu8"]
atlas = ExtResource("3_acuxk")
region = Rect2(0, 70, 16, 16)
script = ExtResource("4_7x0h2")
name = "icon_blank"

[sub_resource type="AtlasTexture" id="AtlasTexture_p1h5i"]
atlas = ExtResource("3_acuxk")
region = Rect2(0, 70, 16, 16)
script = ExtResource("4_7x0h2")
name = "icon_blank"

[sub_resource type="AtlasTexture" id="AtlasTexture_48wrs"]
atlas = ExtResource("3_acuxk")
region = Rect2(64, 86, 16, 16)
script = ExtResource("4_7x0h2")
name = "icon_locked_flat"

[sub_resource type="AtlasTexture" id="AtlasTexture_74dbv"]
atlas = ExtResource("3_acuxk")
region = Rect2(59, 7, 8, 9)
script = ExtResource("4_7x0h2")
name = "stage_icon_checkmark"

[node name="StageIcon" type="MarginContainer"]
custom_minimum_size = Vector2(16, 16)
focus_mode = 1
script = ExtResource("1_g5r4x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -1

[node name="Shadow" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_udqu8")

[node name="LockBG" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_p1h5i")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Lock" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_48wrs")

[node name="Checkmark" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_74dbv")
stretch_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
